# HACKAI-230608

pip_virtenv/: Pipfile  my_first_agent.py  private_keys.json
python_poetry/: api.env  hack_ai.py  pyproject.toml
python_poetry/hack__ai/: README.md  pyproject.toml
python_poetry/hack__ai/hack_ai/: __init__.py
